@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>components</artifactId>
-        <version>2.20.0-SNAPSHOT</version>
+        <version>2.21.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-soap</artifactId>
@@ -291,14 +291,6 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules java.xml.bind,java.xml.ws --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                            <!--https://issues.apache.org/jira/browse/SUREFIRE-1265 -->
-                            <reuseForks>true</reuseForks>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
